for linux compatibility reasons - group id refactoring from "Gustini" to "gustini" Switch to openJDK 11